# ossim-msp-plugin

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
apps/: CMakeLists.txt  ossim-mspsms.cpp
doc/: Doxyfile
scripts/: Jenkinsfile  buildNative.sh
src/: CMakeLists.txt  Config.h  Config.h.in
src/common/: GroundControlPoint.cpp  GroundControlPoint.h  Image.cpp  Image.h  MspImage.cpp  MspImage.h  MspPhotoBlock.cpp  MspPhotoBlock.h  PhotoBlock.cpp  PhotoBlock.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  TiePoint.cpp  TiePoint.h
src/plugin/: ossimMspPluginInit.cpp  ossimMspTool.cpp  ossimMspTool.h  ossimMspToolFactory.cpp  ossimMspToolFactory.h
src/services/: MensurationService.cpp  MensurationService.h  SensorModelService.cpp  SensorModelService.h  ServiceBase.h  SourceSelectionService.cpp  SourceSelectionService.h  TriangulationService.cpp  TriangulationService.h  VersionService.cpp  VersionService.h
test/: CMakeLists.txt  msp-plugin-test.cpp  msp-ss-test.cpp  photoblock-json-test.cpp  photoblock-test.cpp
test/data/: msp-version.json  msp-webservice-response.json
